# mods

./: .dockerignore  .gitignore  .rclone.conf  .stestr.conf  Jenkinsfile  LICENSE  README.md  requirements-cpu-notf.txt  requirements-cpu.txt  requirements-gpu-notf.txt  requirements-gpu.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: .gitignore  features-20180414-20181015-win-1_hour-slide-10_minutes.tsv  sample_data.tsv
data/datapools/mods/: download.sh
data/features/: demo_data.tsv  features-20180414-20181015-win-10_minutes-slide-10_minutes.tsv  features-20180414-20181015-win-1_hour-slide-10_minutes.tsv  features-20180714-20181015-win-1_hour-slide-10_minutes.tsv  validate.sh
data/predict/: model-default-1y-test.tsv
data/test/: sample-test-w01h-s10m.tsv
data/train/: sample-train-w01h-s10m.tsv
docker/: Dockerfile.dev  Dockerfile.tests
docker/jupyter/: jupyter_notebook_config.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: 2015.h5.python36  serie_mock_1h_10m-seq-6.json
models/serie_mock_1h_10m-seq-6/: config.json  model.h5  sample_data.tsv  scaler.pkl
mods/: config.py  mods_types.py  utils.py
mods/dataset/: data_utils.py  make_dataset.py  make_dataset_parquet.py  remove_sensitive.py
mods/features/: build_features.py  build_features_spark.py  select_features.py
mods/models/: api.py  api.py.off  api_v2.py  model.py  mods_model.py  predict.py  test.py  train.py
mods/models/tmp/: train_dev_datapool.py  train_statistical.py
mods/requirements/: requirements-cpu.txt
mods/tests/: test_unit_model.py  test_unit_model_devops.py
mods/tests/inputs/datapool/conn/2019/06/01/: w01h-s10m.tsv
mods/tests/inputs/datapool/conn/2019/06/02/: w01h-s10m.tsv
mods/tests/inputs/datapool/conn/2019/06/03/: w01h-s10m.tsv
mods/tests/inputs/datapool/dns/2019/06/01/: w01h-s10m.tsv
mods/tests/inputs/datapool/dns/2019/06/02/: w01h-s10m.tsv
mods/tests/inputs/datapool/dns/2019/06/03/: w01h-s10m.tsv
mods/tests/inputs/datapool/http/2019/06/01/: w01h-s10m.tsv
mods/tests/inputs/datapool/http/2019/06/02/: w01h-s10m.tsv
mods/visualization/: visualize.py
notebooks/: 1.0-mods_start.py2.ipynb
references/: 20150522-Buraglio-Bro.pptx  README.md
requirements/: requirements-cpu.txt  requirements-gpu.txt
utils/: split2zip.sh
(+10 files in other folders)
