# -*- coding: utf-8 -*-
[metadata]
name = mods
summary = MODS - Massive Online Data Streams
description-file =
    README.md
version = 0.0.1
author = Giang Nguyen, Stefan Dlugolinsky
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    mods

[entry_points]

deepaas.model = 
    mods = mods.models.model

