# -*- coding: utf-8 -*-
[metadata]
name = mods
summary = Massive Online Data Streams (MODS)
description-file =
    README.md
version = 0.0.1
author = Giang Nguyen, Stefan Dlugolinsky
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache License, Version 2.0, https://www.apache.org/licenses/LICENSE-2.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    mods

[entry_points]

deepaas.model = 
    mods = mods.models.api
