# -*- coding: utf-8 -*-
[metadata]
name = mods
summary = Intelligent module using ML/DL techniques for underlying IDS and monitoring system
description-file =
    README.md
version = 2.2.0
author = Giang Nguyen, Stefan Dlugolinsky
author-email = giang.nguyen@savba.sk, stefan.dlugolinsky@savba.sk
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache License, Version 2.0, https://www.apache.org/licenses/LICENSE-2.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    mods

[entry_points]

deepaas.v2.model =
    mods = mods.models.api_v2
